tests/testcases/errors/BCE0089-1.boo
"""
BCE0089-1.boo(7,9): BCE0089: Type 'Foo' already has a definition for 'bar'.
"""
class Foo:
	bar
	
	def bar():
		pass
